# winbtop

./: .gitattributes  .gitlint  .pre-commit-config.yaml  .yamllint  CMakeLists.txt  LICENSE  README.md
.github/workflows/: winbtop.yml
src/: metrics.cpp  metrics_process.cpp  pdh_metrics.h  sampler.h  settings.cpp  settings.h  theme.cpp  theme.h  ui.h  ui_graph.h  util.cpp
src/app/: main.cpp
src/core/: settings.cpp  state.h  util.cpp  util.h
src/metrics/: metrics.h  metrics_process.h  pdh_metrics.cpp  pdh_metrics.h  sampler.cpp
src/ui/: ui.cpp  ui.h
themes/: HotPurpleTrafficLight.theme  adwaita-dark.theme  everforest-light-medium.theme  greyscale.theme  gruvbox_light.theme  solarized_dark.theme  whiteout.theme
